
161229 Martin Mann :
 * CommandLineParsing :
   * IntaRNA_v1_detailed init output now more like v1 output
 * PredictorMfe2dHeuristic* :
   * getNextBest() :
     * bugfix : seq1 range overlap check
 * PredictorMfe4d :
   * getNextBest() :
     * bugfix : getE() using wrong index order
 * PredictorMfe4dSeed :
   * getNextBest() :
     * bugfix : getE() using wrong index order
   * predict() :
     * bugfix : hybridE_seed resize missing
   * fillHybridE_seed() :
     + additional early check for too small interaction sites (no seed)
   * traceBack() :
     * bugfix : energy check right of seed corrected
     * bugfix : check entry existence before access
 * intaRNA :
   + exception catch + handling only in non-debug mode (eases debug)

161224 Martin Mann :
 * OutputHandler :
   + reportedInteractions : count of reported interactions
   + reported() : returns reportedInteractions
 * intaRNA :
   + setup of separator output for IntaRNA v1 output
 * OutputHandlerIntaRNA1detailed :
   + intialOutputDone : tag to store whether or not something was already done
   + prinSeparator : tag whether or not a separator is to be printed
   * constructor()
     - initial output (now part of add())
   * add() 
     + initial output for first reported interactions
     + counting of non-empty interactions
   + addSeparator() : sets printSeparator 

161222 Martin Mann :
 * perl/IntaRNA_1ui.pl :
   - seed energy restriction (only needed to mimic IntaRNA v1 behaviour)
   + output mode setup
 * CommandLineParsing :
   + OutputMode : enum for different output modes
   + PredictionMode_min/max 
   + outMode + validator : output mode argument variable
   * predMode : init via min/max enum entries
   * constructor :
     * argument values via toString() and enum entries to be consistent
     + '--out,-o' : argument to setup output mode
   * parse() :
     + IntaRNA1_detailed input output
   * getOutputHandler() :
     - IntaRNA1_detailed input output
     + switch based on outMode.val